<resources>
    <string name="app_name">Github User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="search_hint">Cari User</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="not_found">Lakukan Pencarian</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="detail_user">Detail User</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="repository">repository</string>
    <string name="favorite">Favorite</string>
    <string name="submit"> </string>
    <string name="delete">delete</string>
    <string name="avatar">avatar</string>

    <string name="buttonIsFavorite">Hapus Favorite</string>
    <string name="buttonFavorite">Tambahkan Favorite</string>

    <string name="dark_mode">Mode Gelap</string>
    <string name="setting">Setting</string>
</resources>